--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.16.4"
+    "express": "^4.16.4",
+    "uniqid": "^5.4.0"
   },
   "repository": {
     "type": "git",
@@ -20,7 +21,6 @@
   },
   "homepage": "https://github.com/fmills89/express-note-taker#readme",
   "devDependencies": {
-    "nodemon": "^2.0.15",
-    "uniqid": "^5.4.0"
+    "nodemon": "^2.0.15"
   }
 }
